# erptronix_theme

./: README.md  preview.html  pyproject.toml  setup.py
erptronix_theme/: api.py  desktop.py  hooks.py  modules.txt  setup.py
erptronix_theme/erptronix_theme/custom/: dashboard.json  number_card.json  workspace.json
erptronix_theme/erptronix_theme/datavalue_theme_15_dashboard/main/: main.json
erptronix_theme/erptronix_theme/doctype/dashboard_map/: dashboard_map.js  dashboard_map.json  dashboard_map.py  test_dashboard_map.py
erptronix_theme/erptronix_theme/doctype/dashboard_map_link/: dashboard_map_link.json  dashboard_map_link.py
erptronix_theme/erptronix_theme/doctype/form_number_card/: form_number_card.js  form_number_card.json  form_number_card.py  test_form_number_card.py
erptronix_theme/erptronix_theme/doctype/report_number_card/: report_number_card.js  report_number_card.json  report_number_card.py  test_report_number_card.py
erptronix_theme/erptronix_theme/doctype/slideshow_photos/: slideshow_photos.json  slideshow_photos.py
erptronix_theme/public/css/: datavalue_theme.bundle.css  dv-login.css  erptronix.css
erptronix_theme/public/js/: erptronix.js  erptronix_theme.app.min.js  erptronix_theme.js  erptronix_theme.web.min.js
erptronix_theme/public/scss/: dv-login.css  dv-login.css.map  dv-login.scss  erptronix_theme.bundle.scss
erptronix_theme/public/scss/partials/: _body.scss  (+9 more)
erptronix_theme/templates/: side-menu.html
erptronix_theme/templates/includes/: splash_screen.html
erptronix_theme/www/: app.html  app.py  login.html  login.py
(+9 files in other folders)
