[project]
name = "erptronix_theme"
version = "1.1.0"
description = "ErpTronix — custom light/dark theme for ERPNext v16"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ErpTronix", email = "hello@erptronix.com"}]
dependencies = ["frappe"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
